manifests/connectivity-link/platform/gateway.yaml
# Gateway north-south — Istio provisiona Service/Deployment automaticamente
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: edge-gateway
  namespace: ingress-gateway
  labels:
    kuadrant.io/gateway: "true"
spec:
  gatewayClassName: istio
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: app-a-super.apps.cluster-vv944.dynamic2.redhatworkshops.io
      allowedRoutes:
        namespaces:
          from: All
    - name: http
      protocol: HTTP
      port: 80
      hostname: app-a.firesoft.com.br
      allowedRoutes:
        namespaces:
          from: All
